fix(page-header): make the toolbar align left in mobile view

--- a/packages/ui/src/assets/css/page.css
+++ b/packages/ui/src/assets/css/page.css
@@ -35,7 +35,7 @@
 
 .dz-page > .dz-page-header > .dz-page-toolbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   gap: var(--dz-page-gap);
   flex-wrap: wrap;
@@ -53,6 +53,7 @@
   .dz-page > .dz-page-header > .dz-page-toolbar {
     margin-left: auto;
     height: fit-content;
+    justify-content: flex-end;
   }
 
   .dz-page > .dz-page-header > .dz-page-title-wrapper > h1 > span {
